fixed font large getting too large on some screens and going over other elements

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-  font-size: 3vw !important;
+  font-size: min(2.25rem, 3vw) !important;
 }
 
 .underline {
